# FastTest-Android-app

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: dg.db
app/src/main/cpp/: CMakeLists.txt  hk.cpp  tst.cpp
app/src/main/java/com/example/myapplication/: FastTest.java  InfoRenderer.java  Ja3WebView.java  MainActivity.java  NativeTest.java
gradle/wrapper/: gradle-wrapper.properties
